@@ -145,7 +145,7 @@ block|}
 comment|/**    * @throws Exception    */
 specifier|public
 name|void
-name|testInfoServersAreUp
+name|testInfoServersRedirect
 parameter_list|()
 throws|throws
 name|Exception
@@ -185,7 +185,7 @@ operator|+
 literal|"/index.html"
 argument_list|)
 argument_list|,
-literal|"master"
+literal|"master-status"
 argument_list|)
 expr_stmt|;
 name|port
@@ -221,7 +221,90 @@ operator|+
 literal|"/index.html"
 argument_list|)
 argument_list|,
-literal|"regionserver"
+literal|"rs-status"
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test that the status pages in the minicluster load properly.    *    * This is somewhat a duplicate of TestRSStatusServlet and    * TestMasterStatusServlet, but those are true unit tests    * whereas this uses a cluster.    */
+specifier|public
+name|void
+name|testInfoServersStatusPages
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// give the cluster time to start up
+operator|new
+name|HTable
+argument_list|(
+name|conf
+argument_list|,
+literal|".META."
+argument_list|)
+expr_stmt|;
+name|int
+name|port
+init|=
+name|cluster
+operator|.
+name|getMaster
+argument_list|()
+operator|.
+name|getInfoServer
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+decl_stmt|;
+name|assertHasExpectedContent
+argument_list|(
+operator|new
+name|URL
+argument_list|(
+literal|"http://localhost:"
+operator|+
+name|port
+operator|+
+literal|"/master-status"
+argument_list|)
+argument_list|,
+literal|"META"
+argument_list|)
+expr_stmt|;
+name|port
+operator|=
+name|cluster
+operator|.
+name|getRegionServerThreads
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getRegionServer
+argument_list|()
+operator|.
+name|getInfoServer
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+expr_stmt|;
+name|assertHasExpectedContent
+argument_list|(
+operator|new
+name|URL
+argument_list|(
+literal|"http://localhost:"
+operator|+
+name|port
+operator|+
+literal|"/rs-status"
+argument_list|)
+argument_list|,
+literal|"META"
 argument_list|)
 expr_stmt|;
 block|}
@@ -273,27 +356,12 @@ operator|.
 name|connect
 argument_list|()
 expr_stmt|;
-name|assertTrue
-argument_list|(
-name|c
-operator|.
-name|getContentLength
-argument_list|()
-operator|>
-literal|0
-argument_list|)
-expr_stmt|;
 name|StringBuilder
 name|sb
 init|=
 operator|new
 name|StringBuilder
-argument_list|(
-name|c
-operator|.
-name|getContentLength
 argument_list|()
-argument_list|)
 decl_stmt|;
 name|BufferedInputStream
 name|bis
@@ -370,16 +438,29 @@ operator|.
 name|toString
 argument_list|()
 decl_stmt|;
-name|assertTrue
-argument_list|(
+if|if
+condition|(
+operator|!
 name|content
 operator|.
 name|contains
 argument_list|(
 name|expected
 argument_list|)
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"Didn't have expected string '"
+operator|+
+name|expected
+operator|+
+literal|"'. Content:\n"
+operator|+
+name|content
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 end_class
